--- a/3-uyshi/templates/parts/_navbar.html
+++ b/3-uyshi/templates/parts/_navbar.html
@@ -108,7 +108,7 @@
                     data-mdb-ripple-init
                     class="btn text-white btn-floating m-1"
                     style="background-color: #0088cc;"
-                    href="https://t.me/rizow_king"
+                    href="https://t.me/sher20080311"
                     role="button"
                 >
                     <i class="fab fa-telegram"></i>
